# battleship

./: README.md  pyproject.toml
battleship/: __main__.py  battleship.py  config.py  instance.py  load_resources.py  objects.py  pyproject.toml  window.py
battleship/battleship/: __main__.py  config.py  window.py
battleship/battleship/elements/: __init__.py  draw.py  field.py  ship.py
battleship/battleship/resources/: load.py
battleship/elements/: __init__.py  coordinates.py  draw.py  field.py  ship.py  utils.py
battleship/gui/: __init__.py  button.py  color_picker.py  input_box.py
battleship/resources/: load.py
battleship/sockets/: __init__.py  accept_messages.py  client.py  config.py  server.py
battleship/utils/: field.py  function.py  ship.py
