[tool.mypy]
strict = true
strict_equality = false
warn_no_return = false
ignore_missing_imports = true

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 79

[tool.poetry]
name = "battleship"
description = "Battleship game"
version = "3.0.0"
authors = ["qxtony"]
repository = "https://github.com/qxtony/battleship"

[tool.poetry.dependencies]
pygame = "^2.1.2"
